syntax = "proto3";

option csharp_namespace = "msg1";

package msg1;

// The request message containing the user's name.
message ReqMsg {
  string name = 1;
}

// The response message containing the greetings.
message ResMsg {
  string message = 1;
}
